--- a/.tsconfig.json
+++ b/.tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
     "module": "ESNext",
-    "jsx": "react",
-    "strict": true,
+    "target": "ESNext",
+    "jsx": "react-jsx",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
