:construction: Delete tsc in build

--- a/.tsconfig.json
+++ b/.tsconfig.json
@@ -12,8 +12,7 @@
     "allowJs": true,
     "isolatedModules": true,
     "noEmit": true,
-    "resolveJsonModule": true,
-    "build": "tsc -p path/to/your/tsconfig.json && vite build"
+    "resolveJsonModule": true
   },
   "include": ["src/**/*", "types/*"]
 }
